Use the original icon and follow the elementary formula

--- a/data/writer.desktop.in
+++ b/data/writer.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Type=Application
-Name=writer
-Comment=A super-simple word processor for elementary
+Name=Writer
 GenericName=Word Processor
-Exec=/usr/bin/writer %U
-Icon=office-document
+Comment=Create simple documents
+Categories=Office;WordProcessor;
+Exec=writer %U
+Icon=writer
 Terminal=false
-Categories=development;Office;WordProcessor;
+Type=Application
