--- a/data/com.github.ryonakano.writer.appdata.xml.in
+++ b/data/com.github.ryonakano.writer.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2018 Ryo Nakano <ryonakaknock3@gmail.com> -->
 <component type="desktop">
-  <id>writer</id>
+  <id>com.github.ryonakano.writer</id>
   <metadata_license>CC0</metadata_license>
   <project_license>GPL-3.0</project_license>
   <name>Writer</name>
