Commnet out ToolBar.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -13,7 +13,7 @@ executable(
         'Widgets/TableToolBar.vala',
         'Widgets/TextToolBar.vala',
         'Widgets/TitleBar.vala',
-        'Widgets/ToolBar.vala',
+        #'Widgets/ToolBar.vala',
         'Widgets/WelcomeView.vala',
         'Application.vala',
         'MainWindow.vala',
