--- a/src/meson.build
+++ b/src/meson.build
@@ -8,11 +8,11 @@ executable(
         'Utils/ZeitgeistLogger.vala',
         'Widgets/ButtonGroup.vala',
         'Widgets/EditorView.vala',
-        'Widgets/ImageToolBar.vala',
+        'Widgets/ImageProperty.vala',
         'Widgets/TableChooser.vala',
-        'Widgets/TableToolBar.vala',
+        'Widgets/TableProperty.vala',
         'Widgets/TextBoxProperty.vala',
-        'Widgets/TextToolBar.vala',
+        'Widgets/TextProperty.vala',
         'Widgets/TitleBar.vala',
         #'Widgets/ToolBar.vala',
         'Widgets/WelcomeView.vala',
