--- a/src/meson.build
+++ b/src/meson.build
@@ -9,6 +9,7 @@ executable(
         'Widgets/ButtonGroup.vala',
         'Widgets/EditorView.vala',
         'Widgets/ImageProperty.vala',
+        'Widgets/ShapeChooser.vala',
         'Widgets/ShapeProperty.vala',
         'Widgets/TableChooser.vala',
         'Widgets/TableProperty.vala',
